--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
                 <li>
                     <a href="./index.html" class="nav-link">Студия</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html" class="nav-link header-portfolio  current">Портфолио</a>
+                <li class="header-portfolio" >
+                    <a href="./portfolio.html" class="nav-link current">Портфолио</a>
                 </li>
                 <li>
                     <a href="" class="nav-link">Контакты</a>
@@ -78,15 +78,26 @@
    <!-- projects -->
       <ul class="projects">
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+    <img src="./image/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
+<p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+исчерпывающие сведения о компании или частном лице.</p>
+</div>
+    <div class="projects-cards">
  <h2 class="projects-card-heading">Технокряк</h2>
 <p class="project-card-paragraph">Веб-сайт</p>   
 </div></a>
 </li>
 
 <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio2.jpg" alt="Дизайн" width="370" height="294">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio2.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div>
 <div class="projects-cards">
     <h2 class="projects-card-heading">Постер New Orlean vs Golden Star</h2>
     <p class="project-card-paragraph">Дизайн</p>
@@ -94,56 +105,91 @@
 
           </li>         
            <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio3.jpg" alt="Приложение" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio3.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Ресторан Seafood</h2>
     <p class="project-card-paragraph">Приложение</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio4.jpg" alt="Маркетинг" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio4.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Проект Prime</h2>
     <p class="project-card-paragraph">Маркетинг</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio5.jpg" alt="Приложение" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio5.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Проект Boxes</h2>
     <p class="project-card-paragraph">Приложение</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Inspiration has no Borders</h2>
     <p class="project-card-paragraph">Веб-сайт</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio7.jpg" alt="Дизайн" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio7.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Издание Limited Edition</h2>
     <p class="project-card-paragraph">Дизайн</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio8.jpg" alt="Маркетинг" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio8.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Проект LAB</h2>
     <p class="project-card-paragraph">Маркетинг</p>
 </div></a>
 
           </li>
           <li class="projects-item">
-<a class="project-link" href=""><img src="./image/portfolio9.jpg" alt="Приложение" width="370" height="294">
-<div class="projects-cards">
+<a class="project-link" href="">
+    <div class="project-image">
+        <img src="./image/portfolio9.jpg" alt="Веб-сайт" width="370" height="294">
+        <p class="project-image-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+            Все это позволит посетителю получить
+            исчерпывающие сведения о компании или частном лице.</p>
+    </div><div class="projects-cards">
     <h2 class="projects-card-heading">Growing Business</h2>
     <p class="project-card-paragraph">Приложение</p>
 </div></a>
