--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
         <ul class="whatwedo-images">
             <li class="whatwedo-image">
          <img src="./image/box1.jpg" alt="1" width="370" height="294">
-         <h3 class="whatwedo-image-text">Десктопные приложения</h3>
+         <p class="whatwedo-image-text">Десктопные приложения</p>
             </li>
             <li class="whatwedo-image">
          <img src="./image/box2.jpg" alt="2" width="370" height="294">
-         <h3 class="whatwedo-image-text">Мобильные приложения</h3>
+         <p class="whatwedo-image-text">Мобильные приложения</p>
             </li>
             <li class="whatwedo-image">
          <img src="./image/box3.jpg" alt="3" width="370" height="294">  
-         <h3 class="whatwedo-image-text">Дизайнерские решения</h3>      
+         <p class="whatwedo-image-text">Дизайнерские решения</p>      
             </li>
         </ul>
     
